@@ -9,7 +9,7 @@
  * @subpackage 	Support\CF7\Modules\Module
  * @copyright   Copyright (c) 2021, WeCodeArt Framework
  * @since 		5.0.0
- * @version		5.3.1
+ * @version		5.4.2
  */
 
 namespace WeCodeArt\Support\Plugins\CF7\Modules;
@@ -41,13 +41,13 @@ class Submit extends Module {
 	 * @return  string Rendered field output.
 	 */
 	public function get_html( $tag ) {
-		$class = wpcf7_form_controls_class( $tag->type ) . ' wp-block-button';
+		$class = wpcf7_form_controls_class( $tag->type ) . ' wp-block-button__link';
         $class = array_filter( explode( ' ', $tag->get_class_option( $class ) ) );
 
         if( ! count( array_filter( $class, function( $i ) {
-            return substr( $i, 0, 9 ) === 'wp-block-';
+            return strpos( $i, '-background-color' );
         } ) ) ) {
-            $class[] = 'wp-block-button__link';
+            $class[] = 'has-primary-background-color has-white-color';
         }
 
         $attrs = [];
@@ -62,9 +62,16 @@ class Submit extends Module {
             $value = __( 'Send', 'wecodeart' );
         }
 
-        return wecodeart_input( 'button', [
+        $html = wecodeart( 'markup' )::wrap( 'cf7-submit-field', [ [
+            'tag' 	=> 'div',
+            'attrs' => [
+                'class' => self::get_wrap_class( $tag, 'wp-block-button' )
+            ]
+        ] ], 'wecodeart_input', [ 'button', [
             'label' => $value,
             'attrs' => $attrs
-        ], false );
+        ] ], false );
+
+        return $html;
 	}
 }
